--- a/senguo.cc/admin/templates/seckill/seckill.html
+++ b/senguo.cc/admin/templates/seckill/seckill.html
@@ -41,7 +41,7 @@
     </ul>
     <p class="no-result mt10">加载中...</p>
 </div>
-<a href="/customer/cart/zhoubing" class="go-cart">
+<a href="/customer/cart/{{shop_code}}" class="go-cart">
     <span class="cart-num origin-cart hide">1</span>
 </a>
 <ul class="hide" id="seckill-item">
