--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -16,8 +16,8 @@
 .goods-list-item .charge-style{clear:both;}
 .goods-list-item .charge-style span,a{display:inline-block;}
 .goods-list-item .charge-first{width:100%;float:left;line-height:36px;padding-right:25px;}
-.goods-list-item .charge-list{padding-right:25px;overflow:hidden;}
-.goods-list-item .charge-list li{height:36px;line-height:36px;}
+.goods-list-item .charge-list{padding-right:20px;overflow:hidden;}
+.goods-list-item .charge-list li{height:36px;line-height:36px;position: relative;}
 .goods-list-item .number-change{position:relative;width:90px;z-index:10;}
 .goods-list-item .minus-plus{display:inline-block;float:left;width:32px;height:32px;border:none;background:url('../svg/icon_list-2.png') no-repeat;background-size:140px 180px;position:absolute;z-index:10;}
 .goods-list-item .number-input{width:60px;position:absolute;left:14px;height:30px;line-height:30px;top:1px;border:1px solid #f7f7f8;background:#fff;}
@@ -127,6 +127,9 @@
 .status-discount{background-image: url('/static/images/status_discount.png');}
 .seckill-btn{width: 60px;height: 28px;line-height: 28px;float:right;text-align: center;color: #fff;font-weight: bold;border-radius: 4px;background-color: #FF9800;}
 .seckill-btn-yes{background-color: #ddd;}
+.price-bo{color: #59D5AA;margin-right: 4px;cursor: pointer;}
+.price-tip{display: inline-block;color: #FF9800;cursor: pointer;padding: 0 4px;border-radius: 12px;border: 1px solid #ff9800;font-size: 12px;height: 18px;line-height: 16px;}
+.wrap-seckill-price{position: absolute;top: 4px;right: -20px;}
 /*swiper*/
 .img-list{width: 100%;height: 0;padding-bottom: 40%;position: relative;background-color: #fff;}
 .swiper-container{width: 100%;height: 0;padding-bottom: 40%;overflow: hidden;position: relative;}
