--- a/senguo.cc/admin/templates/seckill/discount.html
+++ b/senguo.cc/admin/templates/seckill/discount.html
@@ -10,7 +10,7 @@
 <div class="wrap-seckill pm40">
     <div class="discount-item-box">
         <div class="show-time-box no-seckill-time txt-al">
-            <span>距结束&nbsp;<span id="day"></span><span id="hour"></span><span id="minute"></span><span id="second"></span></span>
+            <span>距结束&nbsp;<span class="day"></span><span class="hour"></span><span class="minute"></span><span class="second"></span></span>
         </div>
         <ul class="nm-list">
             <li>
@@ -21,14 +21,23 @@
                     </dt>
                     <dd>
                         <p class="c333 clip nm-name pt0">水晶大葡萄，非常好吃哦</p>
-                        <p class="no-goods mt20">
+                        <div class="no-goods wrap-discount-item">
                             <span class="price-bo">1元/kg</span>
                             <span class="price-tip">8折</span>
-                        </p>
-                        <div class="wrap-operate" data-num="5">
-                            <span class="roll-btn minus-btn">-</span>
-                            <span class="num-txt">5</span>
-                            <span class="roll-btn add-btn">+</span>
+                            <div class="wrap-operate" data-num="5">
+                                <span class="roll-btn minus-btn">-</span>
+                                <span class="num-txt">5</span>
+                                <span class="roll-btn add-btn">+</span>
+                            </div>
+                        </div>
+                        <div class="no-goods wrap-discount-item">
+                            <span class="price-bo">1元/kg</span>
+                            <span class="price-tip">8折</span>
+                            <div class="wrap-operate" data-num="5">
+                                <span class="roll-btn minus-btn">-</span>
+                                <span class="num-txt">5</span>
+                                <span class="roll-btn add-btn">+</span>
+                            </div>
                         </div>
                     </dd>
                 </dl>
@@ -41,14 +50,14 @@
                     </dt>
                     <dd>
                         <p class="c333 clip nm-name pt0">水晶大葡萄，非常好吃哦</p>
-                        <p class="mt20">
+                        <div class="wrap-discount-item">
                             <span class="price-bo">1元/kg</span>
                             <span class="price-tip">9折</span>
-                        </p>
-                        <div class="wrap-operate" data-num="5">
-                            <span class="roll-btn minus-btn">-</span>
-                            <span class="num-txt">1</span>
-                            <span class="roll-btn add-btn">+</span>
+                            <div class="wrap-operate" data-num="5">
+                                <span class="roll-btn minus-btn">-</span>
+                                <span class="num-txt">1</span>
+                                <span class="roll-btn add-btn">+</span>
+                            </div>
                         </div>
                     </dd>
                 </dl>
@@ -61,14 +70,14 @@
                     </dt>
                     <dd>
                         <p class="c333 clip nm-name pt0">水晶大葡萄，非常好吃哦</p>
-                        <p class="mt20">
+                        <div class="wrap-discount-item">
                             <span class="price-bo">1元/kg</span>
                             <span class="price-tip">8折</span>
-                        </p>
-                        <div class="wrap-operate"  data-num="0">
-                            <span class="roll-btn minus-btn hide">-</span>
-                            <span class="num-txt hide">1</span>
-                            <span class="roll-btn add-btn">+</span>
+                            <div class="wrap-operate"  data-num="0">
+                                <span class="roll-btn minus-btn hide">-</span>
+                                <span class="num-txt hide">1</span>
+                                <span class="roll-btn add-btn">+</span>
+                            </div>
                         </div>
                     </dd>
                 </dl>
@@ -78,7 +87,7 @@
 </div>
 <p class="no-result mt10">加载中...</p>
 <a href="javascript:;" class="go-cart">
-    <span class="cart-num  origin-cart hide">1</span>
+    <span class="cart-num origin-cart hide">0</span>
 </a>
 <ul class="hide" id="discount-item">
     <li>
