--- a/senguo.cc/admin/templates/admin/discount-main.html
+++ b/senguo.cc/admin/templates/admin/discount-main.html
@@ -2,6 +2,7 @@
 {% block title%}限时折扣{% end %}
 {% block setcontent %}
 {% if shop_code and shop_code!='not set' %}
+<input class="hidden can_new_discount" value={{can_new_discount}}>
 <div class="clearfix top-box">
     <p class="c333 f14 discount-show-txt">已<span>{%if discount_active_cm==1 %}停用{% else %}启用{%end%}</span>限时折扣<a href="javascript:;" class="ml10 f14 show-detail">查看详情</a></p>
     <p class="mt6">用户可在下单支付时，选择使用优惠券抵扣现金。</p>
@@ -27,7 +28,7 @@
             <li class="txt-center" data-id=3><a href="javascript:;">已停用</a></li>
         </ul>
         <div class="wrap-newbtn fr">
-            <a href="{{reverse_url("DiscountNew")}}?action=newdiscountpage" class="newbtn add-btn  mt6 mr10 cm_new_discout">+新建折扣</a>
+            <a href="javascript:;" class="newbtn add-btn  mt6 mr10 cm_new_discout">+新建折扣</a>
         </div>
     </div>
     <div class="wrap-tb mt30">
