--- a/senguo.cc/admin/templates/admin/shop-cert-set.html
+++ b/senguo.cc/admin/templates/admin/shop-cert-set.html
@@ -79,6 +79,7 @@
                                 <td>
                                     <p class="per-tip">请上传清晰可见的照片，拍照时请勿用手指遮挡身份证信息</p>
                                     <a href="javascript:;" class="per-btn upload-btn" id="upload-per">上传照片</a>
+                                    <p class="per-tip text-pink">（请使用谷歌浏览器上传）</p>
                                     <div class="wrap-img hide" id="wrap-per-img">
                                         <img class="cert-upload-img" src="" alt="身份证照片" id="person-img"/>
                                         <div class="img-cover wrap-img-cover hidden"><span class="loader loader-quart"></span></div>
@@ -117,6 +118,7 @@
                                 <td>
                                     <p class="per-tip">请上传清晰可见的照片，图片大小不大于4M</p>
                                     <a href="javascript:;" class="per-btn upload-btn" id="upload-license">上传营业执照</a>
+                                    <p class="per-tip text-pink">（请使用谷歌浏览器上传）</p>
                                     <div class="wrap-img hide" id="wrap-lis-img">
                                         <img class="cert-upload-img" src="" alt="身份证照片" id="license-img"/>
                                         <div class="img-cover wrap-img-cover hidden"><span class="loader loader-quart"></span></div>
@@ -132,6 +134,7 @@
                                 <td>
                                     <a href="javascript:;" class="per-btn ib upload-btn" id="upload-font">上传身份证照片（正面）</a>
                                     <a href="javascript:;" class="per-btn ib upload-btn" id="upload-rever">上传身份证照片（反面）</a>
+                                    <p class="per-tip text-pink">（请使用谷歌浏览器上传）</p>
                                     <div class="wrap-img hide" id="wrap-legal-img">
                                         <img class="cert-upload-img" src="" alt="身份证照片" id="font-img"/>
                                         <div class="img-cover wrap-img-cover hidden"><span class="loader loader-quart"></span></div>
