--- a/senguo.cc/admin/templates/customer/cart.html
+++ b/senguo.cc/admin/templates/customer/cart.html
@@ -34,7 +34,7 @@
                         </span>
                         {% end %}
                         <div class="pull-right delete-btn">
-                            <a href="javascript:;" class="pull-right delete-item text-center font18 text-grey">x</a>
+                            <a href="javascript:;" class="pull-right delete-item text-center font18 text-grey" activity_type="{{cart_f[key]['activity_type']}}">x</a>
                         </div>
                     </div>
                 </div>
