--- a/senguo.cc/admin/templates/seckill/discount.html
+++ b/senguo.cc/admin/templates/seckill/discount.html
@@ -8,82 +8,39 @@
 {% end %}
 {% block content %}
 <div class="wrap-seckill pm40">
+    {% for item in output_data %}
     <div class="discount-item-box">
-        <div class="show-time-box no-seckill-time txt-al">
+        <div class="show-time-box no-seckill-time txt-al" data-time="{{item['end_time']}}">
             <span>距结束&nbsp;<span class="day"></span><span class="hour"></span><span class="minute"></span><span class="second"></span></span>
         </div>
         <ul class="nm-list">
-            <li>
+            {% for goods in item['group_data']%}
+            <li data-id="{{goods['goods_id']}}">
                 <dl class="nm-dl">
                     <dt>
-                        <img src="/static/images/TDSG.png" alt="商品图片"/>
-                    <div class="cover-img"></div>
+                        <img src="/static/images/TDSG.png" alt="{{goods['goods_name']}}"/>
+                        <div class="cover-img {% if goods['storage']!=0%}hide{% end %}"></div>
                     </dt>
                     <dd>
-                        <p class="c333 clip nm-name pt0">水晶大葡萄，非常好吃哦</p>
-                        <div class="no-goods wrap-discount-item">
-                            <span class="price-bo">1元/kg</span>
-                            <span class="price-tip">8折</span>
+                        <p class="c333 clip nm-name pt0">{{goods['goods_name']}}</p>
+                        {% for charge in goods['charge_types']%}
+                        <div class="wrap-discount-item {% if goods['storage']==0%}no-goods{% end " data-id="{{charge['charge_id']}}">
+                            <span class="price-bo">{{charge['charge']}}</span>
+                            <span class="price-tip">{{goods['discount_rate']}}折</span>
                             <div class="wrap-operate" data-num="5">
                                 <span class="roll-btn minus-btn">-</span>
                                 <span class="num-txt">5</span>
                                 <span class="roll-btn add-btn">+</span>
                             </div>
                         </div>
-                        <div class="no-goods wrap-discount-item">
-                            <span class="price-bo">1元/kg</span>
-                            <span class="price-tip">8折</span>
-                            <div class="wrap-operate" data-num="5">
-                                <span class="roll-btn minus-btn">-</span>
-                                <span class="num-txt">5</span>
-                                <span class="roll-btn add-btn">+</span>
-                            </div>
-                        </div>
+                        {% end %}
                     </dd>
                 </dl>
             </li>
-            <li>
-                <dl class="nm-dl">
-                    <dt>
-                        <img src="/static/images/TDSG.png" alt="商品图片"/>
-                    <div class="cover-img hide"></div>
-                    </dt>
-                    <dd>
-                        <p class="c333 clip nm-name pt0">水晶大葡萄，非常好吃哦</p>
-                        <div class="wrap-discount-item">
-                            <span class="price-bo">1元/kg</span>
-                            <span class="price-tip">9折</span>
-                            <div class="wrap-operate" data-num="5">
-                                <span class="roll-btn minus-btn">-</span>
-                                <span class="num-txt">1</span>
-                                <span class="roll-btn add-btn">+</span>
-                            </div>
-                        </div>
-                    </dd>
-                </dl>
-            </li>
-            <li>
-                <dl class="nm-dl">
-                    <dt>
-                        <img src="/static/images/TDSG.png" alt="商品图片"/>
-                    <div class="cover-img hide"></div>
-                    </dt>
-                    <dd>
-                        <p class="c333 clip nm-name pt0">水晶大葡萄，非常好吃哦</p>
-                        <div class="wrap-discount-item">
-                            <span class="price-bo">1元/kg</span>
-                            <span class="price-tip">8折</span>
-                            <div class="wrap-operate"  data-num="0">
-                                <span class="roll-btn minus-btn hide">-</span>
-                                <span class="num-txt hide">1</span>
-                                <span class="roll-btn add-btn">+</span>
-                            </div>
-                        </div>
-                    </dd>
-                </dl>
-            </li>
+            {% end %}
         </ul>
     </div>
+    {% end %}
 </div>
 <p class="no-result mt10">加载中...</p>
 <a href="javascript:;" class="go-cart">
@@ -94,13 +51,13 @@
         <dl class="nm-dl">
             <dt>
                 <img src="/static/images/TDSG.png" alt="商品图片"/>
-            <div class="cover-img"></div>
+                <div class="cover-img"></div>
             </dt>
             <dd>
-                <p class="c333 clip nm-name pt0">水晶大葡萄，非常好吃哦</p>
+                <p class="c333 clip nm-name pt0"></p>
                 <p class="no-goods mt20">
                     <span class="price-bo">1元/kg</span>
-                    <span class="price-tip">8折</span>
+                    <span class="price-tip"><span class="discount_rate"></span>折</span>
                 </p>
                 <div class="wrap-operate" data-num="5">
                     <span class="roll-btn minus-btn">-</span>
