seckill market cart

--- a/senguo.cc/admin/templates/admin/seckill-detail.html
+++ b/senguo.cc/admin/templates/admin/seckill-detail.html
@@ -24,7 +24,7 @@
                              </colgroup>
                              <thead>
                                             <tr class="thead">　   
-                                                          <td>商品名（10）</td>
+                                                          <td>商品名</td>
                                                           <td>秒杀价/原售价</td>
                                                           <td>秒杀折扣</td>
                                                           <td>领取/下单/库存</td>
